feat: expose secondary genres multiplier to api as well
